Fix the layout on mobile? Maybe?

--- a/src/scss/core/_root.scss
+++ b/src/scss/core/_root.scss
@@ -12,10 +12,7 @@ html {
 }
 
 body {
-  align-content: stretch;
   color: white;
-  display: flex;
-  flex-direction: column;
   font-family: Nunito, sans-serif;
   font-size: 14px;
   font-weight: 300;
